--- a/config/simple.yaml
+++ b/config/simple.yaml
@@ -1,18 +1,18 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 32
-  test_batch_size: 32
+  train_batch_size: 8
+  test_batch_size: 2
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
-  dataset: 'wine'
+  dataset: 'simple'
 
 trainer: 
-  epochs: 4
+  epochs: 5
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
-  in_out_features: 12
+  in_out_features: 5
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [20, 14, 8, 6, 8, 14, 20]
+  hidden_sizes: [4, 3, 2, 3, 4]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
 
