--- a/config/simple.yaml
+++ b/config/simple.yaml
@@ -1,18 +1,18 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 8
-  test_batch_size: 2
+  train_batch_size: 1
+  test_batch_size: 1
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
   dataset: 'simple'
 
 trainer: 
-  epochs: 5
+  epochs: 2
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 5
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [4, 3, 2, 3, 4]
+  hidden_sizes: [3]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
 
