--- a/config/single.yaml
+++ b/config/single.yaml
@@ -1,18 +1,18 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 1
-  test_batch_size: 1
+  train_batch_size: 8
+  test_batch_size: 2
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
   dataset: 'single'
 
 trainer: 
-  epochs: 2
+  epochs: 100
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
-  in_out_features: 12
+  in_out_features: 5
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [24, 18, 12, 8, 12, 18, 24]
+  hidden_sizes: [4, 3, 4]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
 
