--- a/config/single.yaml
+++ b/config/single.yaml
@@ -17,7 +17,4 @@ model:
   device: 'cuda'
 
 path: 
-  csv_save_path: './log'
-  csv_name: 'result.csv'
-  plot_save_path: './image'
-  plot_name: 'autoencoder'
+  experiment_name: 'autoencoder'
