--- a/config/default.yaml
+++ b/config/default.yaml
@@ -18,3 +18,5 @@ model:
 
 path: 
   experiment_name: 'autoencoder'
+  # CRITICAL = 50, ERROR = 40, WARNING = 30, INFO = 20, DEBUG = 10, NOTSET = 0, for example logger_level: 20
+  logger_level: 20
