--- a/config/simple.yaml
+++ b/config/simple.yaml
@@ -6,15 +6,17 @@ data:
   dataset: 'simple'
 
 trainer: 
-  epochs: 2
+  epochs: 50
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 5
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [3]
+  hidden_sizes: [4, 3, 4]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
 
 path: 
   experiment_name: 'autoencoder'
+  # CRITICAL = 50, ERROR = 40, WARNING = 30, INFO = 20, DEBUG = 10, NOTSET = 0, for example logger_level: 20
+  logger_level: 20
