--- a/config/single.yaml
+++ b/config/single.yaml
@@ -1,6 +1,6 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 8
+  train_batch_size: 2
   test_batch_size: 2
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
   dataset: 'single'
@@ -12,9 +12,11 @@ model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 4
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [2]
+  hidden_sizes: [3]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
 
 path: 
   experiment_name: 'autoencoder'
+  # CRITICAL = 50, ERROR = 40, WARNING = 30, INFO = 20, DEBUG = 10, NOTSET = 0, for example logger_level: 20
+  logger_level: 20
