--- a/config/iris.yaml
+++ b/config/iris.yaml
@@ -3,18 +3,18 @@ data:
   train_batch_size: 2
   test_batch_size: 2
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
-  dataset: 'single'
+  dataset: 'iris'
 
 trainer: 
-  epochs: 5
+  epochs: 15
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 4
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [3]
+  hidden_sizes: [3, 2, 3]
   # Options are: 'cuda', 'cpu'
-  device: 'cuda'
+  device: 'cpu'
 
 path: 
   experiment_name: 'autoencoder'
