added multiple ideas for models and plotting

--- a/config/simple.yaml
+++ b/config/simple.yaml
@@ -6,15 +6,17 @@ data:
   dataset: 'simple'
 
 trainer: 
-  epochs: 2
+  epochs: 1
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 5
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [4, 3, 4]
+  hidden_sizes: [4, 4]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
+  #either an integer or null
+  seed: 0 
 
 path: 
   experiment_name: 'autoencoder'
