--- a/config/iris.yaml
+++ b/config/iris.yaml
@@ -15,6 +15,8 @@ model:
   hidden_sizes: [3, 2, 3]
   # Options are: 'cuda', 'cpu'
   device: 'cpu'
+  #either an integer or null
+  seed: 0 
 
 path: 
   experiment_name: 'autoencoder'
