--- a/config/mnist.yaml
+++ b/config/mnist.yaml
@@ -15,6 +15,8 @@ model:
   hidden_sizes: [512, 256, 512]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
+  #either an integer or null
+  seed: 0 
 
 path: 
   experiment_name: 'autoencoder'
