--- a/config/single.yaml
+++ b/config/single.yaml
@@ -1,7 +1,7 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 2
-  test_batch_size: 2
+  train_batch_size: 1
+  test_batch_size: 1
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
   dataset: 'single'
 
@@ -15,6 +15,8 @@ model:
   hidden_sizes: [3]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
+  #either an integer or null
+  seed: 0
 
 path: 
   experiment_name: 'autoencoder'
