--- a/config/wine.yaml
+++ b/config/wine.yaml
@@ -1,20 +1,22 @@
 data: 
   # Batch size either int or null, for example: batch_size: 32 or batch_size: null
-  train_batch_size: 2
-  test_batch_size: 2
+  train_batch_size: 1
+  test_batch_size: 1
   # The dataset to use options are: mnist, wine, or simple for example: dataset: 'mnist'
   dataset: 'wine'
 
 trainer: 
-  epochs: 2
+  epochs: 5
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 12
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [10, 8, 6, 8, 10]
+  hidden_sizes: [10, 8, 10]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
+  # random seed, either an integer or null
+  seed: 0 
 
 path: 
   experiment_name: 'autoencoder'
