--- a/config/wine.yaml
+++ b/config/wine.yaml
@@ -6,7 +6,7 @@ data:
   dataset: 'wine'
 
 trainer: 
-  epochs: 5
+  epochs: 1
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
@@ -16,9 +16,9 @@ model:
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
   # random seed, either an integer or null
-  seed: 0 
+  seed: null
 
 path: 
-  experiment_name: 'autoencoder'
+  experiment_name: 'wine'
   # CRITICAL = 50, ERROR = 40, WARNING = 30, INFO = 20, DEBUG = 10, NOTSET = 0, for example logger_level: 20
   logger_level: 20
