--- a/config/glass.yaml
+++ b/config/glass.yaml
@@ -6,19 +6,19 @@ data:
   dataset: 'glass'
 
 trainer: 
-  epochs: 20
+  epochs: 15
 
 model:
   # The input features as int, will also be the output features example: in_out_features: 784 
   in_out_features: 10
   # The hidden sizes of the layers between input and ouput for example: hidden_sizes: [512, 256, 512]
-  hidden_sizes: [8, 6, 4, 6, 8]
+  hidden_sizes: [8, 7, 8]
   # Options are: 'cuda', 'cpu'
   device: 'cuda'
   #either an integer or null
-  seed: 0 
+  seed: 1
 
 path: 
-  experiment_name: 'autoencoder'
+  experiment_name: 'glass'
   # CRITICAL = 50, ERROR = 40, WARNING = 30, INFO = 20, DEBUG = 10, NOTSET = 0, for example logger_level: 20
   logger_level: 20
